--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,7 @@
     ],
     "content_scripts": [
     {
-        "matches": ["https://lichess.org/*", "https://chess.com/*", "https://www.google.com/*"],
+        "matches": ["https://lichess.org/*", "https://www.chess.com/*", "https://www.google.com/*"],
         "css": ["chess/chess.css"]
     }]
 }
