--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
     "content_scripts": [
     {
         "matches": ["https://lichess.org/*", "https://www.chess.com/*", "https://www.google.com/*"],
-        "css": ["chess/chess.css"]
+        "css": ["chess/chess.css"],
+        "js": ["chess/chess.js"]
     }]
 }
