Update manifest to enable firefox access

--- a/manifest.json
+++ b/manifest.json
@@ -10,7 +10,7 @@
     },
     "web_accessible_resources" : [{
         "resources": ["images/*"],
-        "matches": [],
+        "matches": ["<all_urls>"],
        "extension_ids": []
         }
     ],
