Increase speed of YouTube videos

--- a/manifest.json
+++ b/manifest.json
@@ -15,11 +15,16 @@
         }
     ],
     "content_scripts": [
-    {
-        "matches": ["https://lichess.org/*", "https://www.chess.com/*", "https://play.xiangqi.com/*"],
-        "css": ["chess/chess.css"],
-        "js": ["chess/chess.js"]
-    }],  
+        {
+            "matches": ["https://lichess.org/*", "https://www.chess.com/*", "https://play.xiangqi.com/*"],
+            "css": ["chess/chess.css"],
+            "js": ["chess/chess.js"]
+        },
+        {
+            "matches": ["https://www.youtube.com/*"],
+            "js": ["youTube/youTube.js"]
+        }
+],  
     "action": {
         "default_popup": "popup.html"
     }
